# nooterra

./: .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  Dockerfile  Dockerfile.agentverse  EXPLAINER.md  PRODUCTION-BIBLE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VISION-ARCHITECTURE.md  agents.md  docker-compose.yml  eslint.config.mjs  install.sh  mkdocs.yml  nixpacks.toml  nooterra.sln  openclaw.plugin.json  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
.codex/: config.toml  mcp.json
.github/: CODEOWNERS  pull_request_template.md
.serena/: project.yml
conformance/: README.md
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
demo-agent/: agent.js  nooterra.json  policy.yaml
docs/: .gitignore  .mintignore  ADOPTION_CHECKLIST.md  (+68 more)
services/ml-sidecar/: Dockerfile  docker-compose.yml  pyproject.toml  railway.toml  requirements.in  requirements.txt
services/ml-sidecar/src/: bandit.py  calibration.py  catboost_model.py  conformal.py  db.py  drift.py  epoch_trigger.py  features.py  models.py  ood.py  segments.py  server.py  survival.py  tenant_stats.py  training.py  trajectory.py  uplift.py
services/ml-sidecar/tests/: conftest.py  test_calibration.py  test_conformal.py  test_drift.py  test_ood.py  test_server.py  test_uplift.py
(+2754 files in other folders)
