[project]
name = "nooterra-ml-sidecar"
version = "0.1.0"
description = "ML sidecar for Nooterra: conformal prediction, calibration, drift detection, OOD detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "mapie>=0.9",
    "river>=0.21",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"
